@@ -5,7 +5,7 @@
 #
 # This is part of the Tinusaur/MAX7219LED8x8 project.
 #
-# Copyright (c) 2017 Neven Boyanov, The Tinusaur Team. All Rights Reserved.
+# Copyright (c) 2018 Neven Boyanov, The Tinusaur Team. All Rights Reserved.
 # Distributed as open source software under MIT License, see LICENSE.txt file.
 # Retain in your source code the link http://tinusaur.org to the Tinusaur project.
 #
